--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
         .recommendation-item { display: flex; flex-direction: column; background: #f8faf8; border: 1px solid #e5e7eb; border-radius: 12px; padding: 1.5rem; }
         .rec-description { flex-grow: 1; }
         
-        /* --- NUOVO: Stile per il badge di priorità --- */
         .priority-badge {
             padding: 0.25rem 0.75rem;
             border-radius: 9999px;
@@ -184,6 +183,74 @@
         .ai-button:hover { background-color: #2d4b2d; color: white; }
         .loader { width: 48px; height: 48px; border: 5px solid #4a7c59; border-bottom-color: transparent; border-radius: 50%; display: inline-block; box-sizing: border-box; animation: rotation 1s linear infinite; }
         @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+
+        /* --- NUOVO: MEDIA QUERY PER DISPOSITIVI MOBILI --- */
+        @media (max-width: 768px) {
+            body {
+                overflow: auto; /* Permette lo scroll su mobile */
+                height: auto;
+                align-items: flex-start; /* Allinea il contenuto in alto */
+            }
+
+            #presentation-container {
+                max-width: 100%;
+                height: 100%;
+                border-radius: 0;
+                background-color: transparent; /* Rimuove lo sfondo nero su mobile */
+                box-shadow: none;
+            }
+
+            .aspect-ratio-box {
+                padding-top: 0; /* Rimuove l'aspect ratio fisso */
+                height: calc(100vh - 84px); /* Occupa lo schermo meno lo spazio per i controlli */
+            }
+
+            .page {
+                padding: 2rem 1.5rem;
+                border-radius: 0;
+            }
+
+            .cover-title { font-size: 3rem; }
+            .cover-subtitle { font-size: 1rem; }
+            .page-title { font-size: 2.2rem; }
+            .page-subtitle { font-size: 1rem; }
+            .content-title { font-size: 1.2rem; }
+            .content-description { font-size: 0.95rem; }
+
+            /* Adatta i layout a colonna singola */
+            .flex-grow.grid {
+                grid-template-columns: 1fr;
+            }
+            .client-section .grid {
+                grid-template-columns: 1fr;
+            }
+            .recommendation-item {
+                margin-bottom: 1.5rem;
+            }
+
+            /* Fissa i controlli in basso */
+            #navigation-controls {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                background-color: rgba(17, 24, 39, 0.9); /* #111827 con trasparenza */
+                backdrop-filter: blur(5px);
+                -webkit-backdrop-filter: blur(5px);
+                padding: 1rem;
+                justify-content: center;
+                border-top: 1px solid #374151;
+            }
+            .nav-button, #page-indicator, #reset-btn {
+                background-color: rgba(255, 255, 255, 0.1);
+                color: #e5e7eb;
+                border: 1px solid rgba(255, 255, 255, 0.2);
+            }
+             .nav-button:hover { background-color: #4a7c59; color: white; }
+             #reset-btn { background-color: rgba(239, 68, 68, 0.2); color: #fca5a5; }
+             #reset-btn:hover { background-color: #ef4444; color: white; }
+        }
 
     </style>
 </head>
@@ -275,7 +342,6 @@
                     <div class="flex-grow grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- Card 1 -->
                         <div class="recommendation-item">
-                            <!-- MODIFICA: Header per titolo e badge -->
                             <div class="flex justify-between items-start mb-2">
                                 <h3 class="text-xl font-semibold text-green-800" contenteditable="true" id="qw1-title">Air-Purifying Plant Integration</h3>
                                 <div class="priority-badge" contenteditable="true" id="qw1-priority">Alta</div>
@@ -499,6 +565,7 @@
             priorityBadges.forEach(badge => {
                 badge.addEventListener('blur', () => {
                     updateBadgeColor(badge);
+                    saveData(); // Salva i dati anche dopo aver cambiato il colore
                 });
             });
 
